# atelie-account-api

./: .env-EXEMPLO  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-quality.yml
apps/addresses/: models.py
apps/addresses/api/: serializers.py  urls.py  views.py
apps/addresses/migrations/: 0001_initial.py
apps/audit/: apps.py  context.py  middleware.py  mixins.py  models.py  repository.py  services.py  signals.py
apps/audit/migrations/: 0001_initial.py  0002_alter_logoutbox_id.py
apps/authentication/: authentication.py
apps/authentication/api/: urls.py
apps/authentication/api/serializers/: login.py  register.py
apps/authentication/api/views/: login.py  password.py  register.py  (+1 more)
apps/users/: adapters.py  admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/users/api/: urls.py
apps/users/migrations/: 0001_initial.py  0002_useraddress.py  0003_alter_user_cpf_alter_user_phone_number_and_more.py  0004_rename_name_user_first_name_user_last_name.py  0005_delete_useraddress.py
apps/wallets/: admin.py  dependencies.py  models.py  services.py
apps/wallets/api/: urls.py
apps/wallets/migrations/: 0001_initial.py
config/: boto3.py  logger.py  settings.py  storages.py  urls.py
config/settings/: base.py  local.py  production.py
infra/messaging/: base_consumer.py  base_publisher.py  broker.py  connection.py  constants.py  exchanges.py  queues.py  worker.py
infra/messaging/events/: store_created.py  user_created.py
infra/messaging/handlers/: active_artisan.py  create_wallet.py  wallet_transaction.py
infra/messaging/publishers/: log_register.py  user_created.py
templates/account/email/: email_confirmation_signup_message.html  email_confirmation_signup_subject.txt  password_reset_key_message.html
(+8 files in other folders)
