[project]
name = "accounts-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth[with-social]>=7.2.0",
    "django>=6.0.2",
    "django-allauth[socialaccount]>=65.15.1",
    "django-environ>=0.13.0",
    "django-ninja-jwt>=5.4.4",
    "djangorestframework>=3.17.1",
    "drf-yasg>=1.21.15",
    "pillow>=12.1.0",
]
